--- a/muvy_backend/.env
+++ b/muvy_backend/.env
@@ -1,1 +1,4 @@
-URL=mongodb+srv://hype:hype@cluster0.ehryy.mongodb.net/EscapeRoom
+URL=mongodb+srv://muvy:muvy@muvydb.x8tc0.mongodb.net/muvyDb?retryWrites=true&w=majority
+SECRET=muvy
+SENDGRID_API_KEY=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
+
