--- a/muvy_backend/package.json
+++ b/muvy_backend/package.json
@@ -10,6 +10,9 @@
   "author": "Pablo Naveira",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
@@ -20,10 +23,12 @@
     "helmet": "^4.5.0",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "license-key-generator": "^1.1.2",
-    "mongoose": "^5.12.6",
+    "mongoose": "^6.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.5.1",
     "react-geolocated": "^3.2.0",
     "socket.io": "^4.0.2",
     "validator": "^13.6.0"
